--- a/static/css/base.css
+++ b/static/css/base.css
@@ -183,6 +183,7 @@ html::-webkit-scrollbar-track {
 
 /*trpMainContainer*/
 .MainContainer {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: calc(100vw - 22rem);
@@ -281,7 +282,7 @@ html::-webkit-scrollbar-track {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: (100% - 2rem);
+  width: calc(100% - 2rem);
   height: 5.8rem;
   padding: 0 1rem;
   margin-bottom: 2rem;
